fix spacing

--- a/src/systems/ec/implementations/vanilla/packages/ec-component-message/ec-component-message.scss
+++ b/src/systems/ec/implementations/vanilla/packages/ec-component-message/ec-component-message.scss
@@ -46,7 +46,7 @@
   }
 
   .ecl-message__close {
-    bottom: 0;
+    bottom: $ecl-spacing-m - $ecl-spacing-s;
     color: $close-color;
     font: $ecl-font-s;
     position: absolute;
@@ -74,6 +74,7 @@
       grid-row-end: 4;
       grid-row-start: 3;
       justify-self: end;
+      margin-bottom: -($ecl-spacing-s);
       position: relative;
       right: auto;
     }
@@ -87,12 +88,13 @@
 
     .ecl-message__description {
       font: $ecl-font-prolonged-s;
+      padding-bottom: 0;
     }
 
     .ecl-message__close {
       bottom: auto;
       font: $ecl-font-m;
-      top: 0;
+      top: $ecl-spacing-l - $ecl-spacing-s;
     }
 
     @supports (display: grid) {
@@ -105,6 +107,8 @@
         grid-column-start: 2;
         grid-row-end: span 2;
         grid-row-start: 1;
+        margin-bottom: 0;
+        margin-top: -($ecl-spacing-s);
         position: relative;
         right: auto;
         top: auto;
